# Platformer

./: .gitignore  CMakeLists.txt  Main.cpp  Platformer.sln  Platformer.vcxproj  main.cpp  run.bat  run.sh
Debug/: vc143.idb
Debug/Platformer.tlog/: Platformer.lastbuildstate
src/: Include.h
src/characters/: Player.cpp  Player.h  player.cpp  player.h
src/maths/: Vector.h
src/utils/: AssetFilePaths.h  Include.h
x64/Debug/: Platformer.exe.recipe  Platformer.ilk  Platformer.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Platformer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Platformer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
